--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
     "normalize.css": "^8.0.1",
     "now": "^16.6.3",
     "parcel-bundler": "^1.12.4",
@@ -12,6 +14,10 @@
   "scripts": {
     "build": "parcel build -d public src/index.html",
     "deploy": "now",
-    "dev": "parcel src/index.html"
+    "dev": "parcel -d public src/index.html"
+  },
+  "dependencies": {
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   }
 }
