--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "target": "es5",
     "forceConsistentCasingInFileNames": true,
-    "lib": ["dom", "es6"]
+    "lib": ["dom", "es6"],
+    "jsx": "react"
   }
 }
